--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
+    "moment": "^2.29.1",
     "vue": "^2.6.14",
+    "vue-infinite-loading": "^2.4.5",
     "vuejs-datepicker": "^1.6.2"
   },
   "devDependencies": {
