--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^0.26.1",
     "core-js": "^3.8.3",
     "moment": "^2.29.1",
+    "sass": "^1.49.9",
+    "sass-loader": "^12.6.0",
     "vue": "^2.6.14",
     "vue-infinite-loading": "^2.4.5",
     "vuejs-datepicker": "^1.6.2"
